# misalignment-bounty

./: .gitignore  README.md  bias.py  compose.yaml  eval.py  main.py  pyproject.toml  requirements.txt  run.py
transcripts/2025-05-23/: 2025-05-23T14-59-32-07-00_bounty_6EkPnFe298aatoV73RcyqP.eval  2025-05-23T14-59-32-07-00_bounty_7WAYd6AiGxtkwtSQcf5Qd5.eval  2025-05-23T14-59-32-07-00_bounty_AfKqiKZmKaW9LZbmy5hAP6.eval  2025-05-23T14-59-32-07-00_bounty_Ffgr8y9AqkaPu7CcD8N5gc.eval  2025-05-23T14-59-32-07-00_bounty_PjMqezsncw4VtHctMyFRjC.eval  2025-05-23T14-59-32-07-00_bounty_Qhc7wkdsvExaXNMn3cGcLA.eval  2025-05-23T14-59-32-07-00_bounty_UWSvAjsf3nPikL8wPxSehH.eval  2025-05-23T14-59-32-07-00_bounty_ZyFJPe7bgTsD9hx45EmhCV.eval  2025-05-23T14-59-32-07-00_bounty_c8eyLV8ijQSamyEDWHTiXX.eval  2025-05-23T14-59-32-07-00_bounty_e86KZpvZExVjZdW6EMCnXR.eval  2025-05-23T14-59-32-07-00_bounty_fx25TAgwUWAaWi4gUDaexD.eval  2025-05-23T14-59-32-07-00_bounty_i8MRPbGBWLtz4RbaYaJFmy.eval  2025-05-23T14-59-32-07-00_bounty_mTWCEwyEfo42Kz9nadKMjF.eval  2025-05-23T14-59-32-07-00_bounty_oG3zip4VnsrEkhQwxTUQZZ.eval  logs.json
