[project]
name = "misalignment-bounty"
version = "0.1.0"
description = "Offering bounties for reporting misalignment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.52.0",
    "dotenv>=0.9.9",
    "google-genai>=1.16.1",
    "inspect-ai>=0.3.99",
    "openai>=1.82.0",
]
